<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的应用</string>
    <string name="action_settings">Settings</string>
    <string name="main_logined_user_name">已登录用户：</string>
    <string name="main_to_login">现在登录</string>
    <string name="main_to_register">我要注册</string>
    <string name="title_activity_login">登录</string>
    <string name="user_name">用户名：</string>
    <string name="user_pwd">密码：</string>
    <string name="login">登录</string>
    <string name="to_register">立即注册</string>
    <string name="title_activity_register">注册</string>
    <string name="register">注册</string>
    <string name="help">帮助</string>
    <string name="title_activity_help">帮助</string>
    <string name="phoneNo">13800000000</string>
    <string name="call">直接拨打电话</string>
    <string name="view_website">浏览网页</string>
    <string name="back_home">返回系统主界面</string>

</resources>
