<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ht.activity.MainActivity" >

    <TextView
        android:id="@+id/mainLoginedUserTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_logined_user_name" />

    <TextView
        android:id="@+id/mainLoginedUserNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mainLoginedUserTxt"
        android:layout_toEndOf="@+id/mainLoginedUserTxt"
        android:layout_toRightOf="@+id/mainLoginedUserTxt"
        android:text="" />

    <TextView
        android:id="@+id/mainToLoginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainLoginedUserTxt"
        android:layout_alignLeft="@+id/mainLoginedUserTxt"
        android:layout_below="@+id/mainLoginedUserTxt"
        android:layout_marginTop="20dp"
        android:text="@string/main_to_login" 
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/mainToRegTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mainToLoginTxt"
        android:layout_alignBottom="@+id/mainToLoginTxt"
        android:layout_alignLeft="@+id/mainLoginedUserNameTxt"
        android:layout_alignStart="@+id/mainLoginedUserNameTxt"
        android:text="@string/main_to_register"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/mainHelpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mainToRegTxt"
        android:layout_alignBottom="@+id/mainToRegTxt"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_toEndOf="@+id/mainToRegTxt"
        android:layout_toRightOf="@+id/mainToRegTxt"
        android:text="@string/help" 
        android:textColor="@color/blue" />
    
</RelativeLayout>